--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,20 +9,15 @@
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/outline_chat_bubble_24"
-        android:title="chat"/>
-
+        android:title="Chat"/>
 
     <item
         android:id="@+id/nav_outline_apps_24"
         android:icon="@drawable/outline_apps_24"
         android:title="Apps"/>
 
-
     <item
         android:id="@+id/nav_baseline_person_24"
         android:icon="@drawable/baseline_person_24"
         android:title="Profile"/>
-
-
-
 </menu>
