myminiprofilemallo bottom menu with fragments

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,6 +5,7 @@
     android:background="@android:color/holo_orange_light">
 
     <TextView
+        android:id="@+id/ChatFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Chat Fragment"
