--- a/app/src/main/res/drawable/bottom_nav_bg.xml
+++ b/app/src/main/res/drawable/bottom_nav_bg.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="16dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp"/>
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="7dp"/>
+    <stroke android:width="1dp" android:color="#DDDDDD"/>
 </shape>
