--- a/app/src/main/res/layout/fragment_apps.xml
+++ b/app/src/main/res/layout/fragment_apps.xml
@@ -5,6 +5,7 @@
     android:background="@android:color/holo_blue_light">
 
     <TextView
+        android:id="@+id/AppsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Apps Fragment"
