--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,6 +10,7 @@
         android:id="@+id/textView"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:text="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
