--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/nav_baseline_home_24"
-        android:icon="@drawable/baseline_home_24"
-        android:title="Home"/>
-
+        android:id="@+id/nav_home"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:title="Home" />
+    <item
+        android:id="@+id/nav_chat"
+        android:icon="@android:drawable/ic_menu_send"
+        android:title="Chat" />
+    <item
+        android:id="@+id/nav_apps"
+        android:icon="@android:drawable/ic_menu_view"
+        android:title="Apps" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/outline_chat_bubble_24"
-        android:title="Chat"/>
-
-    <item
-        android:id="@+id/nav_outline_apps_24"
-        android:icon="@drawable/outline_apps_24"
-        android:title="Apps"/>
-
-    <item
-        android:id="@+id/nav_baseline_person_24"
-        android:icon="@drawable/baseline_person_24"
-        android:title="Profile"/>
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="Profile" />
 </menu>
