--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="holo_blue_dark">#2196F3</color>
+    <color name="red">#D32F2F</color>
+    <color name="purple_50">#F3E5F5</color>
 </resources>
